add swagger project using (only) retrofit2
not using rxjava